-
Bug
-
Resolution: Done
-
Not Evaluated
-
4.8.0
-
None
-
4.8.0 and higher
-
47c48ea87ae836b1c22255744ec2ef8aacdb61af
Qt crash when reload a plugin: loadPlugin -> unload -> loadPlugin will crash.
To fix it, I add "instance = 0;" after "pHnd = 0;" in unload function.
- is duplicated by
-
QTBUG-24079 [REG]: QPluginLoader: When trying to reload a plugin after it has been unloaded then instance() will return 0
-
- Closed
-